--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "exchange-rates-api": "^1.1.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@types/exchange-rates-api": "^1.0.0"
+    "@types/exchange-rates-api": "^1.0.0",
+    "postcss-normalize": "^10.0.0"
   }
 }
